# sync_lidartag_apriltag

./: CMakeLists.txt  README.md  package.xml
alignment_msg/: CMakeLists.txt  package.xml
alignment_msg/msg/: TagDetectionAlignment.msg  TagDetectionAlignmentArray.msg
launch/: alignment_node2.launch  alignment_node3.launch  alignment_node_only.launch  cam_lidar_front_end2_launch.launch  cam_lidar_front_end3.launch  sync_cam_lidar.launch  sync_node.launch  sync_node_only.launch
src/: detection_align_node.cpp  sync_cam_lidar_node.cpp
