<?xml version="1.0"?>
<package>
  <name>alignment_msgs</name>
  <version>0.1.0</version>
  <description>The alignment_msgs package</description>

  <maintainer email="chenxif@todo.todo">chenxif</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltag_msgs</build_depend>
  <build_depend>lidartag_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>apriltag_msgs</run_depend>
  <run_depend>lidartag_msgs</run_depend>

</package>
